test/bad/nullables/nullable03.px

func f(s: String) def
    return

s: String? = ""
f(s)
